noinst_LIBRARIES = libtiniconv.a
libtiniconv_a_SOURCES = tiniconv.c \
	tiniconv_desc.c \
	tiniconv.h \
	tiniconv_int.h \
	encdec/iso8859_11.h \
	encdec/mac_cyrillic.h \
	encdec/iso8859_13.h \
	encdec/koi8_r.h \
	encdec/iso8859_14.h \
	encdec/iso8859_15.h \
	encdec/iso8859_16.h \
	encdec/koi8_u.h \
	encdec/gbk.h \
	encdec/cp866.h \
	encdec/vietcomb.h \
	encdec/cp1250.h \
	encdec/cp1251.h \
	encdec/flushwc.h \
	encdec/cp1252.h \
	encdec/ucs2.h \
	encdec/cp1253.h \
	encdec/cp1254.h \
	encdec/cp1255.h \
	encdec/cp1256.h \
	encdec/cp1257.h \
	encdec/cp1258.h \
	encdec/cp936ext.h \
	encdec/ascii.h \
	encdec/iso2022_jp.h \
	encdec/ces_gbk.h \
	encdec/gb2312.h \
	encdec/gbkext_inv.h \
	encdec/cp936.h \
	encdec/gbkext1.h \
	encdec/gbkext2.h \
	encdec/iso8859_1.h \
	encdec/iso8859_2.h \
	encdec/iso8859_3.h \
	encdec/iso8859_4.h \
	encdec/iso8859_5.h \
	encdec/iso8859_6.h \
	encdec/iso8859_7.h \
	encdec/iso8859_8.h \
	encdec/iso8859_9.h \
	encdec/jisx0201.h \
	encdec/koi8_ru.h \
	encdec/utf7.h \
	encdec/utf8.h \
	encdec/jisx0208.h \
	encdec/iso8859_10.h \
	encdec/euc_cn.h \
	encdec/big5.h \
	encdec/ces_big5.h

EXTRA_DIST =
